--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>wordwrap</module>
         <module>roman_numerals</module>
         <module>yahtzee</module>
+        <module>coffee_machine</module>
     </modules>
 
     <properties>
@@ -34,6 +35,13 @@
             <version>3.4.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>2.0.2-beta</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <!-- Property based testing -->
         <dependency>
