--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>wordwrap</module>
         <module>roman_numerals</module>
         <module>yahtzee</module>
+        <module>mowitnow</module>
     </modules>
 
     <properties>
