--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,13 @@
         <module>roman_numerals</module>
         <module>yahtzee</module>
         <module>mowitnow</module>
+        <module>hiegel_calculator</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+        <kotlin.version>1.0.4</kotlin.version>
     </properties>
 
     <dependencies>
@@ -65,6 +67,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Kotlin -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest</artifactId>
+            <version>1.3.5</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
@@ -78,6 +93,23 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <version>${kotlin.version}</version>
+
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <goals> <goal>compile</goal> </goals>
+                    </execution>
+
+                    <execution>
+                        <id>test-compile</id>
+                        <goals> <goal>test-compile</goal> </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
