--- a/pom.xml
+++ b/pom.xml
@@ -19,27 +19,32 @@
         <module>bowling</module>
         <module>rpn</module>
         <module>coffee_machine</module>
-        <module>gameoflife</module>
         <module>game_of_life</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
-        <kotlin.version>1.0.4</kotlin.version>
+        <kotlin.version>1.1.4</kotlin.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.jason-goodwin</groupId>
-            <artifactId>better-monads</artifactId>
-            <version>0.4.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.5.6</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jason-goodwin</groupId>
+            <artifactId>better-monads</artifactId>
+            <version>0.4.0</version>
         </dependency>
 
         <dependency>
