First (big) part of the refactoring

--- a/gilded_rose/pom.xml
+++ b/gilded_rose/pom.xml
@@ -11,6 +11,14 @@
 
     <groupId>fr.hadrienmp.katas</groupId>
     <artifactId>gilded_rose</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.approvaltests</groupId>
+            <artifactId>approvaltests</artifactId>
+            <scope>system</scope>
+            <version>020</version>
+            <systemPath>${basedir}/../lib/ApprovalTests.jar</systemPath>
+        </dependency>
+    </dependencies>
 
 </project>
